# orchestrator_service

./: .gitignore  .pre-commit-config.yaml  README.md  README_PYPI.md  Taskfile.yml  gen_doc.yaml  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  search.html  setup.cfg  setup.py  tox.ini
_modules/orch_serv/msg/: message.html
_modules/orch_serv/service/: service.html
_sources/modules/: modules.rst.txt
_sources/usage/: installation.rst.txt
docs/: GENERAL_INFO.MD  __init__.MD  exc.MD  settings.MD
docs/msg/: __init__.MD  message.MD
docs/orchestrator/: __init__.MD
docs/orchestrator/block/: __init__.MD  async_block.MD  base_block.MD  sync_block.MD  syncblock.MD
docs/orchestrator/flow/: __init__.MD  async_flow.MD  base_flow.MD  flow.MD  sync_flow.MD
docs/orchestrator/orchestrator/: __init__.MD  async_orchestrator.MD  orchestrator.MD  sync_orchestrator.MD
docs/service/: __init__.MD  service.MD
docs/source/: conf.py  index.rst
docs/source/modules/: orch_serv.msg.rst  orch_serv.orchestrator.block.rst  orch_serv.orchestrator.rst
docs/stepper/: __init__.MD  stepper.MD  utils.MD
example/: example_custom_message.py  example_stepper.py
example/example_orchestrator/: README.md  example_orchestrator.py
example/example_orchestrator/example_blocks/: __init__.py  example_first_block.py  example_second_block.py  importer_async_block.py  importer_sync_block.py
example/example_orchestrator/example_flows/: __init__.py  example_first_flow.py  example_second_flow.py  importer_async_flows.py  importer_sync_flows.py
example/example_service/: README.md  example_service.py
example/example_service/post_processes/: __init__.py  first_post_processor.py  (+1 more)
modules/: orch_serv.html  orch_serv.service.html
orch_serv/: __init__.py  exc.py  settings.py
orch_serv/msg/: __init__.py  message.py
orch_serv/orchestrator/: README.md  __init__.py
orch_serv/service/: README.md  __init__.py  service.py
orch_serv/stepper/: README.MD  __init__.py  stepper.py  utils.py
requirements/: base.txt  dev.txt  docs.txt  lint.txt  test.txt
tests/: test_block.py  test_flow.py  test_msg.py  test_orchestrator.py  test_service.py  test_stepper.py  tst_msg.py
tests/settings/: settings_test_block.py  settings_test_flow.py  settings_test_service.py  settings_test_stepper.py
usage/: installation.html
(+33 files in other folders)
