[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "orch_serv"

authors = [{name = "Denis Shchutkiy", email = "denisshchutskyi@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/Shchusia/orchestrator_service/"
