

[project]
name = "orch_serv"
version = "0.2.0"
description = "Library for fast build service and interaction management"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Denis Shchutskyi", email = "denisshchutskyi@gmail.com" }
]


dependencies = [
    "pydantic>=2.10.6",
]


[dependency-groups]
lint = [
    "black>=24.8.0",
    "mypy>=1.14.1",
    "pre-commit>=3.5.0",
    "ruff>=0.13.1",
]
tests = [
    "coverage>=7.6.1",
    "coveralls>=4.0.1",
    "factory-boy>=3.3.3",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1",
]

[tool.coverage.run]
branch = true
source = ["orch_serv"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".pytest_cache",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    "venv",
    "tests",
    "__init__.py"
]
select = ["E", "F", "I", "UP", "C90", "B"]
ignore = ["E501", "E203", "F401", "UP038"]
fixable = ["I001", "F401"]



[tool.ruff.isort]
force-sort-within-sections = true
combine-as-imports = true

#[tool.ruff.per-file-ignores]
#"*__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = false
disallow_subclassing_any = false
mypy_path = "stubs"
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "*"
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true

[tool.uv.workspace]
members = [
    "venv",
]
